--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -34,6 +34,9 @@
 
 		.dropdown-all {
 			grid-column: span 2;
+			.menu {
+				width: 45vw;
+			}
 		}
 
 		.fetch-btn,
